# Solitare

./: CMakeLists.txt  README.md  build.sh
Projects/engine/: CMakeLists.txt  engine.h  engine_api.h
Projects/engine/Depends/glad/: CMakeLists.txt
Projects/engine/Depends/glad/include/glad/: glad.h
Projects/engine/resources/shaders/screen_shader/: screen_shader_fragment.glsl  screen_shader_vertex.glsl
Projects/engine/src/camera/: camera.c  camera.h
Projects/engine/src/core/input_manager/: input_manager.c  input_manager.h
Projects/engine/src/core/rendering/framebuffer/: framebuffer.h  framebuffer_attachment.h
Projects/engine/src/core/rendering/meshing/: array_buffer.h  buffer_enums.h  vertex_array.h
Projects/engine/src/core/rendering/output_buffer/: output_buffer.h  output_buffer_attachment.h  output_buffer_data.h
Projects/engine/src/core/rendering/shaders/: shader_program.h  shader_stage.h  shader_uniform.h
Projects/engine/src/core/rendering/utils/: screen_clearing.h
Projects/engine/src/core/screen_renderer/: screen_renderer.c  screen_renderer.h
Projects/engine/src/core/utils/: camera.c  camera.h  file.h  mathf.h  texture_file.c  texture_file.h  transform.c  transform.h
Projects/engine/src/core/windowing/: window.h  window_manager.h
Projects/engine/src/core/windowing/screen_renderer/: screen_renderer.h
Projects/engine/src/input_manager/: input_manager.c  input_manager.h
Projects/engine/src/mesh/: mesh.c
Projects/engine/src/platform/: platform.h
Projects/engine/src/platform/os/linux/: linux.c
Projects/engine/src/shader/: shader.c  shader.h  shader_uniform.h
Projects/engine/src/transform/: transform.h
Projects/engine/src/types/: array_list.h  boolean.h  color.h  linked_list.c  linked_list.h  list.h  matrix4.h  multi2.h  vector2.h  vector3.h  vector4.h
Projects/engine/src/types/list_types/: normal_list.c  normal_list.h
Projects/engine/src/window/: window.c  window.h
Projects/engine/src/windowing/: window.h  window_manager.c  window_manager.h
Projects/game/: CMakeLists.txt
Projects/game/src/: main.c
Projects/game/src/board/: board.h  board_renderer.c  board_renderer.h
Projects/game/src/board/board_renderer/: board_renderer.c  board_renderer.h
Projects/game/src/card/: card.c  card.h
Projects/game/src/card/card_manager/: card_manager.c  card_manager.h
Projects/game/src/card/card_renderer/: card_renderer.c  card_renderer.h
Projects/game/src/card/hover/: card_hover.h
Projects/game/src/card/manager/: card_manager.c  card_manager.h  card_pile.h  card_row.h  held_card.h
Projects/game/src/card/renderer/: card_renderer.h
(+77 files in other folders)
